--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,6 +1,6 @@
 play.http.secret.key="@HvOFl>Blid>5BzCZy?qC8vpqsvbqxAc;koS`n@^`r8JX=rceP`kpTTo<du_W[9r"
 # https://www.playframework.com/documentation/latest/Configuration
 
-play.filters.enabled += play.filters.hosts {
+play.filters.hosts {
   allowed = ["."]
 }
