confに設定を追加

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -2,3 +2,17 @@ play.http.secret.key="@HvOFl>Blid>5BzCZy?qC8vpqsvbqxAc;koS`n@^`r8JX=rceP`kpTTo<d
 # https://www.playframework.com/documentation/latest/Configuration
 
 play.filters.enabled=[]
+
+password=${?PASSWORD_ENV}
+
+twitter {
+  consumer {
+    key = ${?CONSUMER_KEY_ENV}
+    secret = ${?CONSUMER_SECRET_ENV}
+  }
+  access {
+    key = ${?ACCESS_KEY_ENV}
+    secret = ${?ACCESSS_SECRET_ENV}
+  }
+}
+
