cookieの有効期限を24時間に設定

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -3,6 +3,9 @@ play.http.secret.key="@HvOFl>Blid>5BzCZy?qC8vpqsvbqxAc;koS`n@^`r8JX=rceP`kpTTo<d
 
 play.filters.enabled=[]
 
+play.http.session.maxAge = 24h
+play.http.session.jwt.expiresAfter = 24h
+
 password=${?PASSWORD_ENV}
 
 twitter {
