--- a/package.json
+++ b/package.json
@@ -1,7 +1,9 @@
 
 {
-  "start": "cd front && npm install && npm run build",
   "engines": {
     "node": "8.11.3"
+  },
+  "scripts": {
+    "heroku-postbuild": "cd front && npm install && npm run build"
   }
 }
