stageにビルドタスクを紐づけた

--- a/package.json
+++ b/package.json
@@ -4,6 +4,6 @@
     "npm": "6.7.0"
   },
   "scripts": {
-    "heroku-postbuild": "cd front ; npm install ; npm run build"
+    //"heroku-postbuild": "cd front ; npm install ; npm run build"
   }
 }
