--- a/front/package.json
+++ b/front/package.json
@@ -10,6 +10,7 @@
     "test:unit": "vue-cli-service test:unit"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "terser": "^3.14.1",
     "vue": "^2.5.22",
     "vue-router": "^3.0.1",
