--- a/conf/application.conf
+++ b/conf/application.conf
@@ -1,7 +1,14 @@
+include "setting.conf"
 play.http.secret.key="@HvOFl>Blid>5BzCZy?qC8vpqsvbqxAc;koS`n@^`r8JX=rceP`kpTTo<du_W[9r"
 # https://www.playframework.com/documentation/latest/Configuration
 
 play.filters.enabled=[]
+
+slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
+slick.dbs.default.db.driver="org.postgresql.Driver"
+slick.dbs.default.db.url=${?DATABASE_URL}
+slick.dbs.default.db.user=${?DATABASE_USER}
+slick.dbs.default.db.password=${?DATABASE_PASS}
 
 play.http.session.maxAge = 24h
 play.http.session.jwt.expiresAfter = 24h
