--- a/conf/application.conf
+++ b/conf/application.conf
@@ -9,6 +9,7 @@ slick.dbs.default.db.driver="org.postgresql.Driver"
 slick.dbs.default.db.url=${?DATABASE_URL}
 slick.dbs.default.db.user=${?DATABASE_USER}
 slick.dbs.default.db.password=${?DATABASE_PASS}
+slick.dbs.default.db.connectionTestQuery="/*ping*/ select 1"
 
 play.http.session.maxAge = 24h
 play.http.session.jwt.expiresAfter = 24h
