--- a/conf/application.conf
+++ b/conf/application.conf
@@ -6,10 +6,14 @@ play.filters.enabled=[]
 
 slick.dbs.default.profile="slick.jdbc.PostgresProfile$"
 slick.dbs.default.db.driver="org.postgresql.Driver"
-slick.dbs.default.db.url=${?DATABASE_URL}
-slick.dbs.default.db.user=${?DATABASE_USER}
-slick.dbs.default.db.password=${?DATABASE_PASS}
+slick.dbs.default.db.url=${?DATABASE_URL_X}
 slick.dbs.default.db.connectionTestQuery="/*ping*/ select 1"
+
+play.evolutions {
+  autoApply = true
+  autoApplyDowns = false
+}
+
 
 play.http.session.maxAge = 24h
 play.http.session.jwt.expiresAfter = 24h
