--- a/conf/application.conf
+++ b/conf/application.conf
@@ -11,7 +11,7 @@ slick.dbs.default.db.connectionTestQuery="/*ping*/ select 1"
 
 play.evolutions {
   autoApply = true
-  autoApplyDowns = false
+  autoApplyDowns = true
 }
 
 
